@@ -1,5 +1,8 @@
 2011-12-14    <h.v.raven@googlemail.com>
 
+	* src/xmldecoder.cpp (decode_spell_resistance_): new function
+	(decode_elements_): added spell resistance to decoding functions
+
 	* src/spell.cpp (read_level): replaced hack with tiny self-build search function
 
 2011-12-13    <h.v.raven@googlemail.com>
